--- a/info/templates/about.html
+++ b/info/templates/about.html
@@ -21,9 +21,7 @@
         			<div class="col-8">
         				<br/><br/>
         				<p align="justify">
-        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin blandit nisl ac iaculis porttitor. Mauris condimentum, massa ac mattis condimentum, orci purus tincidunt nulla, a hendrerit nisl lacus vitae tellus. Nullam fermentum eros eu dolor viverra pretium. Aenean ligula sem, sollicitudin nec justo vitae, malesuada elementum ligula.
-        				<br/><br/>
-        				Cras molestie mollis tellus rhoncus maximus. Suspendisse venenatis enim et nisl varius lobortis. Curabitur ullamcorper dui quis leo accumsan, id porta ipsum consequat. Duis libero turpis, dignissim sit amet turpis nec, laoreet porta est. Duis dictum risus arcu, venenatis tempor ante rutrum vitae. Nulla mauris ante, placerat sit amet enim quis, interdum feugiat odio. Vivamus tincidunt sagittis tellus id pretium.
+        				Under Construction
         			</p>
         			<br/><br/>
 
