more privacy policy stuff

--- a/info/templates/privacy.html
+++ b/info/templates/privacy.html
@@ -19,9 +19,10 @@
           <div class="card-body">
             <h5 class="card-title">Basketball Tracker</h5>
             <ol class="list-group list-group-numbered">
-              <li class="list-group-item">The app doesn't share personal data about the user of any kind. All data collected by the app is stored internally in the app.</li>
+              <li class="list-group-item">The app doesn't share personal data with third parties about the user of any kind. All data collected by the app is stored internally in the app.</li>
               <li class="list-group-item">The app does not access location services, the app camera, or the app microphone.</li>
               <li class="list-group-item">The app does not collect user analytics.</li>
+              <li class="list-group-item">The app allows access to the web. A website link to our website is provided in the app.</li>
             </ol>
             
           </div>
@@ -32,7 +33,7 @@
           <div class="card-body">
             <h5 class="card-title">Vegan Dine</h5>
             <ol class="list-group list-group-numbered">
-              <li class="list-group-item">The app does not collect or share any personal information about the user.</li>
+              <li class="list-group-item">The app does not collect or share any personal information about the user with third parties.</li>
               <li class="list-group-item">The app does not use location services, the app camera, or the app microphone.</li>
               <li class="list-group-item">No user analytics are collected by the app.</li>
               <li class="list-group-item">The app allows access to the web. Website links to restaurants are provided in the app</li>
@@ -49,7 +50,7 @@
               <li class="list-group-item">The app does not use location services, the app camera, or the app microphone.</li>
               <li class="list-group-item">No user analytics are collected by the app.</li>
               <li class="list-group-item">The app allows access to the web. Website links to several websites are provided in the app</li>
-              
+              <li class="list-group-item">The app allows access to the web. A website link to our website is provided in the app.</li>
             </ol>  
           </div>
         </div>
