--- a/info/templates/privacy.html
+++ b/info/templates/privacy.html
@@ -19,7 +19,7 @@
           <div class="card-body">
             <h5 class="card-title">Basketball Tracker</h5>
             <ol class="list-group list-group-numbered">
-              <li class="list-group-item">The app doesn't share personal data with third parties about the user of any kind. All data collected by the app is stored internally in the app.</li>
+              <li class="list-group-item">Data Collection: The app doesn't share personal data with third parties about the user of any kind. All data collected by the app is stored internally in the app. Data is only used to stroe game information.</li>
               <li class="list-group-item">The app does not access location services, the app camera, or the app microphone.</li>
               <li class="list-group-item">The app does not collect user analytics.</li>
               <li class="list-group-item">The app allows access to the web. A website link to our website is provided in the app.</li>
